# RustyLeagues

./: .env  Cargo.toml  README.md  Rocket.toml
api/: Cargo.toml
entity/: Cargo.toml
entity/src/: league.rs  lib.rs  player.rs  season.rs
migration/: Cargo.toml
migration/src/: create_table.rs
migration_seaorm/: Cargo.toml
migration_seaorm/src/: lib.rs  m20230922_194422_create_league_tables.rs
service/: Cargo.toml
src/: main.rs
