[package]
name = "rusty_leagues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
#members = [".", "api", "service", "entity", "migration_seaorm"]
mwmbers = [".", "api", "service", "entity"]

[dependencies]
api = { path = "api" }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["postgres"]}
